[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "biomedos"
version = "0.1.0"
description = "Local-first multi-agent biomedical operating system with knowledge graph reasoning, PubMed RAG, graph ML, and clinical decision support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "torch>=2.0",
    "torch-geometric>=2.5",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "langgraph>=0.2",
    "langchain-ollama",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pyvis>=0.3",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "rank-bm25>=0.2",
    "tenacity>=8.0",
    "rich>=13.0",
    "biopython>=1.83",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff", "mypy", "pytest-cov"]
anthropic = ["anthropic>=0.30"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chromadb",
    "fastapi",
    "fastapi.*",
    "httpx",
    "networkx",
    "numpy",
    "numpy.*",
    "pyvis.*",
    "rank_bm25",
    "rich.*",
    "scipy",
    "scipy.*",
    "sklearn.*",
    "tenacity",
    "tenacity.*",
    "torch",
    "torch_geometric.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["biomedos.api.*"]
ignore_errors = true
